# Call-Python-from-cpp

./: CMakeLists.txt  compile.sh  main.cc  script.py  test.py
